<resources>
    <string name="app_name">Discuz Hub</string>
    <string name="action_settings">Settings</string>
    <string name="title_add_a_forum_by_url">Add a forum by URL</string>
    <string-array name="url_prefix">
        <item>http://</item>
        <item>https://</item>
    </string-array>
    <string name="add_a_forum_by_url_safe_client_check">Use safe client to ensure HTTPS integrity and migrate to HTTPS if possible.</string>
    <string name="bbs_anonymous">Incognito</string>
    <string name="bbs_register_an_account">Register at %1$s</string>
    <string name="delete_forum_information">The forum is deleted.</string>
    <string name="bbs_undo_delete">undo</string>
    <string name="network_failed">Failed to fetch the information due to network error</string>
    <string name="parse_failed">Failed to parse the bbs information.</string>
    <string name="add_a_forum_successfully">Successfully added a forum to database.</string>
    <string name="bbs_upgrade_to_https">Upgrade to the safer HTTPS protocol.</string>
    <string name="bbs_input_a_base_url">Base URL of BBS</string>
    <string name="title_activity_global_settings">Settings</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync bbs information periodically</string>
    <string name="preference_key_sync_information">preference_key_sync_information</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming messages.</string>
    <string name="attachment_summary_off">Only download attachments when manually requested.</string>
    <string name="bbs_qq_connect_ok">Support QQ connect</string>
    <string name="preference_title_display">Display</string>
    <string name="preference_title_use_safer_client">Use safer HTTPS client</string>
    <string name="preference_key_use_safer_client">preference_key_use_safer_client</string>
    <string name="preference_summary_on_use_safer_client">A safe HTTPS client will protect your privacy and data\'s integrity.</string>
    <string name="preference_summary_off_use_safer_client">The client will not authorize the integrity of networking and your data may leak in transition.</string>
    <string-array name="string_dark_mode_night_shift">
        <item>Light mode</item>
        <item>Dark mode</item>
        <item>Dark mode in battery saving one</item>
        <item>Follow system</item>
    </string-array>
    <string name="preference_title_use_browser_client">Client\'s user agent</string>
    <string name="preference_key_use_browser_client">preference_key_use_browser_client</string>
    <string-array name="preference_entries_use_browser_client">
        <item>NONE</item>
        <item>Android default</item>
    </string-array>
    <string-array name="preference_entry_values_use_browser_client">
        <item>NONE</item>
        <item>ANDROID</item>
    </string-array>
    <string name="preference_title_display_mode">Display mode</string>
    <string name="preference_key_display_mode" translatable="false">preference_key_display_mode</string>
    <string name="preference_default_display_mode" translatable="false">MODE_NIGHT_FOLLOW_SYSTEM</string>
    <string name="add_a_forum_help_text">Base URL means the basic url where one forum may serve.</string>
    <string name="protocol_http_setting">Set HTTP protocol and it\'s not safe.</string>
    <string name="protocol_https_setting">Set safer HTTPS protocol.</string>
    <string name="global_default_bbs_setting">Global BBS Defaults</string>
    <string name="action_bbs_user_status">User status</string>
    <string name="bbs_more_thread_btn">More Thread</string>
    <string name="bbs_forum_thread">Thread</string>
    <string name="bbs_forum_post">Post</string>
    <string name="time_template_yesterday_time">Yesterday %s</string>
    <string name="time_template_today_time">Today %s</string>
    <string name="time_template_days_ago">%d days ago %s</string>
    <string name="bbs_forum_pinned">Pinned</string>
    <string name="preference_group_title_network">Network</string>
    <string name="preference_title_data_save_mode">Data saver mode</string>
    <string name="preference_summary_on_data_save">Image and attachments are not downloaded under mobile condition.</string>
    <string name="preference_summary_off_data_save">Image and attachments will be downloaded automactically.</string>
    <string name="preference_key_data_save_mode" translatable="false">preference_key_data_save_mode</string>
    <string name="add_a_account">New user</string>
    <string name="app_about">About</string>
    <string name="preference_title_sync_time">Sync time</string>
    <string name="preference_key_sync_time">preference_key_sync_time</string>
    <string name="preference_title_sync_at_night">Don\'t disturb at night</string>
    <string name="preference_key_dont_distrub_at_night">preference_key_dont_distrub_at_night</string>
    <string name="preference_summary_on_sync_at_night">The app will not sync information with server from 11.00 PM to 08.00 AM.</string>
    <string name="preference_summary_off_sync_at_night">The app will sync with server at night and may disturb you.</string>
    <string name="preference_title_send_post_backup">Post backup</string>
    <string name="preference_key_send_post_backup">preference_key_send_post_backup</string>
    <string name="preference_summary_on_send_post_backup">The app will backup your post in local draft box while posting a thread.</string>
    <string name="preference_summary_off_send_post_backup">Your post will not backup while posting a thread.</string>
    <string name="preference_title_auto_post_backup">Auto backup</string>
    <string name="preference_key_auto_post_backup">preference_key_auto_post_backup</string>
    <string name="preference_summary_on_auto_post_backup">The app will automatically backup your thread.</string>
    <string name="preference_summary_off_auto_post_backup">You need to press draft icon to save your thread.</string>
    <string name="bbs_draft_box">Draft box</string>
    <string name="bbs_personal_center">Personal Information</string>
    <string name="bbs_show_in_external_browser">Show in external broswer</string>
    <string name="bbs_show_in_internal_browser">Show in APP\'s webview</string>
    <string name="preference_title_recv_notification_situation">Notification situation</string>
    <string name="preference_key_recv_notification_situation" translatable="false">preference_key_recv_notification_situation</string>
    <string name="bbs_notification_myThread_thread">Thread</string>
    <string name="bbs_notification_myThread_comment">Comment</string>
    <string name="bbs_notification_myThread_activity">Activity</string>
    <string name="bbs_notification_myThread_reward">Reward</string>
    <string name="bbs_notification_myThread_good">Goods</string>
    <string name="bbs_notification_myThread_mentioned">Mentioned</string>
    <string name="bbs_notification_interact_poke">Poke</string>
    <string name="bbs_notification_interact_friend">Friend</string>
    <string name="bbs_notification_interact_wall">Left Message</string>
    <string name="bbs_notification_interact_comment">Comment</string>
    <string name="bbs_notification_interact_agree">Agreed</string>
    <string name="bbs_notification_interact_share">Share</string>
    <string name="preference_key_vibrate_when_load_all" translatable="false">preference_key_viberate_when_load_all</string>
    <string name="preference_title_vibrate_when_load_all">Vibrating notification</string>
    <string name="preference_summary_on_vibrate_when_load_all">Vibrate when all threads are loaded.</string>
    <string name="bbs_manage_users">Manage users</string>
    <string name="register_an_account">Sign up</string>
    <string name="settings_security">Security</string>
    <string name="settings_post_header">Post</string>
    <string name="settings_vibrate_header">Vibrate</string>
    <string name="preference_key_record_history" translatable="false">preference_key_record_history</string>
    <string name="preference_title_record_history">Record view history</string>
    <string name="preference_summary_on_record_history">Your view on forum, thread, post will be recorded locally.</string>
    <string name="preference_summary_off_record_history">Your view history will not be recorded.</string>
    <string name="view_history">View history</string>
    <string name="preference_key_outlink_warn" translatable="false">preference_key_outlink_warn</string>
    <string name="preference_title_outlink_warn">Outer link notification</string>
    <string name="share">Share</string>
    <string name="favorite">Favorite</string>
    <string name="preference_key_sync_favorite" translatable="false">preference_key_sync_favorite</string>
    <string name="preference_title_sync_favorite">Sync favorite threads and forums</string>
    <string name="preference_summary_on_sync_favorite">Sync favorite threads and forums from server</string>
    <string name="preference_summary_off_sync_favorite">Only retrieve favorite threads and forums from database</string>
    <string name="preference_key_concise_recyclerview" translatable="false">preference_key_concise_recyclerview</string>
    <string name="preference_title_concise_recyclerview">Concise display</string>
    <string name="preference_summary_on_concise_recyclerview">It may improve the performance slightly. It is recommended to turn on in low-memory devices.</string>
    <string name="preference_key_collapse_forum_rule" translatable="false">preference_key_collapse_forum_rule</string>
    <string name="preference_title_collapse_forum_rule">Collapse forum rule</string>
    <string name="preference_summary_on_collapse_forum_rule">The max lines of forum rules will be set to 5. But you still can click the text to expand it.</string>
    <string name="preference_summary_off_collapse_forum_rule">The forum rule will be originally displayed. Click the text to collapse it.</string>
    <string name="preference_key_clear_history_periodically" translatable="false">preference_key_clear_history_periodically</string>
    <string name="preference_title_clear_history_periodically">Clear view histories automatically.</string>
    <string name="preference_summary_on_clear_history_periodically">App will clear over-much view history when device is idle.</string>
    <string name="preference_summary_off_clear_history_periodically">All view histories will store and may possibly make app run slow.</string>
    <string name="search">Search</string>
    <string name="preference_key_recyclerview_animation" translatable="false">preference_key_recyclerview_animation</string>
    <string name="preference_summary_on_recyclerview_animation">Enable list animation and it may freeze the interface.</string>
    <string name="preference_summary_off_recyclerview_animation">Disable list animation, it may improve app\'s performance in low-profile devices.</string>
    <string name="preference_title_recyclerview_animation">List\'s animation</string>
    <string name="preference_key_recyclerview_animation_list" translatable="false">preference_key_recyclerview_animation_list</string>
    <string name="preference_title_recyclerview_animation_list">Change animation</string>
    <string name="preference_key_adapter_animation" translatable="false">preference_key_adapter_animation</string>
    <string name="preference_title_adapter_animation">Scroll animation</string>
    <string name="filter_forum">Filter</string>
    <string name="preference_key_theme" translatable="false">preference_key_theme</string>
    <string name="preference_title_theme">Select App\'s theme</string>
</resources>