<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory android:title="@string/settings_security">

<!--        <androidx.preference.SwitchPreference-->
<!--            android:defaultValue="true"-->
<!--            android:icon="@drawable/vector_drawable_security_24px"-->
<!--            android:key="@string/preference_key_use_safer_client"-->
<!--            android:summaryOff="@string/preference_summary_off_use_safer_client"-->
<!--            android:summaryOn="@string/preference_summary_on_use_safer_client"-->
<!--            android:title="@string/preference_title_use_safer_client" />-->
        <androidx.preference.ListPreference
            android:defaultValue="ANDROID"
            android:entries="@array/preference_entries_use_browser_client"
            android:entryValues="@array/preference_entry_values_use_browser_client"
            android:icon="@drawable/vector_drawable_fingerprint_24px"
            android:key="@string/preference_key_use_browser_client"
            android:summary="%s"
            android:title="@string/preference_title_use_browser_client" />
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_baseline_history_24"
            android:key="@string/preference_key_record_history"
            android:summaryOff="@string/preference_summary_off_record_history"
            android:summaryOn="@string/preference_summary_on_record_history"
            android:title="@string/preference_title_record_history" />
        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_auto_delete_view_histories_24px"
            android:key="@string/preference_key_clear_history_periodically"
            android:summaryOff="@string/preference_summary_off_clear_history_periodically"
            android:summaryOn="@string/preference_summary_on_clear_history_periodically"
            android:title="@string/preference_title_clear_history_periodically" />
        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_open_in_new_24px"
            android:key="@string/preference_key_outlink_warn"
            android:title="@string/preference_title_outlink_warn"/>


    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/preference_title_display">
        <Preference
            android:key="@string/preference_key_theme"
            android:title="@string/preference_title_theme">

            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.kidozh.discuzhub"
                android:targetClass="com.kidozh.discuzhub.activities.ChooseThemeActivity">

            </intent>

        </Preference>
        <androidx.preference.ListPreference
            android:defaultValue="@string/preference_default_display_mode"
            android:entries="@array/string_dark_mode_night_shift"
            android:entryValues="@array/dark_mode_night_shift"
            android:icon="@drawable/ic_style_24px"
            android:key="@string/preference_key_display_mode"
            android:summary="%s"
            android:title="@string/preference_title_display_mode" />
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_concise_view_24px"
            android:key="@string/preference_key_concise_recyclerview"

            android:summaryOn="@string/preference_summary_on_concise_recyclerview"
            android:title="@string/preference_title_concise_recyclerview" />
        <androidx.preference.SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_recyclerview_animate_on_24px"
            android:key="@string/preference_key_recyclerview_animation"

            android:summaryOn="@string/preference_summary_on_recyclerview_animation"
            android:summaryOff="@string/preference_summary_off_recyclerview_animation"
            android:title="@string/preference_title_recyclerview_animation" />

        <androidx.preference.ListPreference
            android:dependency="@string/preference_key_recyclerview_animation"
            android:entries="@array/preference_entries_recyclerview_animation_list"
            android:entryValues="@array/preference_entry_values_recyclerview_animation_list"
            android:icon="@drawable/ic_recyclerview_animation_list_24px"
            android:key="@string/preference_key_recyclerview_animation_list"
            android:title="@string/preference_title_recyclerview_animation_list"
            android:summary="%s" />
        <androidx.preference.MultiSelectListPreference
            android:dependency="@string/preference_key_recyclerview_animation"
            android:entries="@array/preference_entries_adapter_animation"
            android:entryValues="@array/preference_entry_values_adapter_animation"
            android:icon="@drawable/ic_recyclerview_animation_list_24px"
            android:key="@string/preference_key_adapter_animation"
            android:title="@string/preference_title_adapter_animation"
             />

        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_collapse_forum_rule_24px"
            android:key="@string/preference_key_collapse_forum_rule"

            android:summaryOn="@string/preference_summary_on_collapse_forum_rule"
            android:summaryOff="@string/preference_summary_off_collapse_forum_rule"
            android:title="@string/preference_title_collapse_forum_rule" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/preference_group_title_network">

        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_eco_24px"
            android:key="@string/preference_key_data_save_mode"
            android:summaryOff="@string/preference_summary_off_data_save"
            android:summaryOn="@string/preference_summary_on_data_save"
            android:title="@string/preference_title_data_save_mode" />

        <androidx.preference.SwitchPreference
            android:icon="@drawable/ic_thread_attachment_24px"
            app:dependency="@string/preference_key_sync_information"
            app:icon="@drawable/ic_thread_attachment_24px"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory app:title="@string/settings_post_header">

        <androidx.preference.EditTextPreference
            android:icon="@drawable/ic_thread_attachment_24px"
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />
        <androidx.preference.SwitchPreference

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_update_24px"
            android:key="@string/preference_key_send_post_backup"
            android:summaryOff="@string/preference_summary_off_send_post_backup"
            android:summaryOn="@string/preference_summary_on_send_post_backup"
            app:defaultValue="true"
            app:title="@string/preference_title_send_post_backup"
            app:useSimpleSummaryProvider="true" />
        <androidx.preference.SwitchPreference

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:icon="@drawable/ic_settings_backup_restore_24px"
            android:key="@string/preference_key_auto_post_backup"
            android:summaryOff="@string/preference_summary_off_auto_post_backup"
            android:summaryOn="@string/preference_summary_on_auto_post_backup"
            app:defaultValue="true"
            app:title="@string/preference_title_auto_post_backup"
            app:useSimpleSummaryProvider="true" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory app:title="@string/sync_header">

        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_sync_24px"
            android:key="@string/preference_key_sync_information"
            app:icon="@drawable/ic_sync_24px"
            app:key="@string/preference_key_sync_information"
            android:title="@string/sync_title" />

        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_sync_favorite_24px"
            android:key="@string/preference_key_sync_favorite"
            android:summaryOn="@string/preference_summary_on_sync_favorite"
            android:summaryOff="@string/preference_summary_off_sync_favorite"
            android:title="@string/preference_title_sync_favorite"
            android:dependency="@string/preference_key_sync_information"/>

        <androidx.preference.ListPreference
            android:defaultValue="30min"
            android:entries="@array/preference_entries_sync_time"
            android:entryValues="@array/preference_entry_values_sync_time"
            android:icon="@drawable/vector_drawable_schedule_24px"
            android:key="@string/preference_key_sync_time"
            android:summary="%s"
            android:title="@string/preference_title_sync_time"
            app:dependency="@string/preference_key_sync_information" />
        <androidx.preference.SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_snooze_24px"
            android:key="@string/preference_key_dont_distrub_at_night"
            android:summaryOff="@string/preference_summary_off_sync_at_night"
            android:summaryOn="@string/preference_summary_on_sync_at_night"
            android:title="@string/preference_title_sync_at_night"
            app:dependency="@string/preference_key_sync_information" />
        <androidx.preference.MultiSelectListPreference
            android:defaultValue="@array/preference_entry_values_recv_notification_situation"
            android:entries="@array/preference_entry_recv_notification_situation"
            android:entryValues="@array/preference_entry_values_recv_notification_situation"
            android:icon="@drawable/vector_drawable_confirmation_number_24px"
            android:key="@string/preference_key_recv_notification_situation"
            android:title="@string/preference_title_recv_notification_situation"
            app:dependency="@string/preference_key_sync_information" />


    </androidx.preference.PreferenceCategory>


    <androidx.preference.PreferenceCategory android:title="@string/settings_vibrate_header">


        <androidx.preference.SwitchPreferenceCompat
            android:icon="@drawable/ic_vibration_24px"
            app:icon="@drawable/ic_vibration_24px"
            app:key="@string/preference_key_vibrate_when_load_all"
            android:defaultValue="true"
            android:summaryOn="@string/preference_summary_on_vibrate_when_load_all"
            app:title="@string/preference_title_vibrate_when_load_all" />
    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
