<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bbs_search"
        android:icon="@drawable/ic_search_24px"
        android:title="@string/search" />
    <item
        android:id="@+id/forum_filter"
        android:icon="@drawable/ic_round_filter_list_24"
        android:title="@string/filter_forum" />
    <item
        android:id="@+id/bbs_favorite"
        android:icon="@drawable/ic_not_favorite_24px"
        android:title="@string/favorite"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bbs_forum_nav_draft_box"
        android:icon="@drawable/vector_drawable_drafts_24px"
        android:title="@string/bbs_draft_box" />
    <item
        android:id="@+id/bbs_share"
        android:icon="@drawable/ic_share_24px"
        android:title="@string/share" />
    <item
        android:id="@+id/bbs_forum_nav_personal_center"
        android:icon="@drawable/ic_account_box_24px"
        android:title="@string/bbs_personal_center"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/bbs_forum_nav_show_in_webview"
        android:title="@string/bbs_show_in_internal_browser"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/bbs_forum_nav_show_in_external_browser"
        android:icon="@drawable/ic_open_in_browser_24px"
        android:title="@string/bbs_show_in_external_browser" />
    <item
        android:id="@+id/bbs_settings"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/bbs_about_app"
        android:icon="@drawable/ic_verified_user_24px"
        android:title="@string/app_about" />
</menu>