<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bbs_forum_nav_dateline_sort"
        android:icon="@drawable/ic_baseline_arrow_upward_24"
        android:title="@string/bbs_draft_box"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bbs_search"
        android:icon="@drawable/ic_search_24px"
        android:title="@string/search"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bbs_favorite"
        android:icon="@drawable/ic_not_favorite_24px"
        android:title="@string/favorite"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bbs_share"
        android:icon="@drawable/ic_share_24px"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/paging_view"
        android:title="@string/paging_view" />
    <item
        android:id="@+id/bbs_forum_nav_show_in_webview"
        android:title="@string/bbs_show_in_internal_browser"
        android:icon="@drawable/ic_open_internal_in_new_24px"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bbs_forum_nav_show_in_external_browser"
        android:icon="@drawable/ic_open_in_browser_24px"
        android:title="@string/bbs_show_in_external_browser"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/bbs_settings"
        android:title="@string/action_settings" />
</menu>