<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kidozh.discuzhub.MainActivity" >
    <item
        android:id="@+id/bbs_favorite"
        android:icon="@drawable/ic_not_favorite_24px"
        android:title="@string/favorite"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bbs_share"
        android:icon="@drawable/ic_share_24px"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/bbs_forum_nav_show_in_webview"
        android:title="@string/bbs_show_in_internal_browser"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/bbs_forum_nav_show_in_external_browser"
        android:icon="@drawable/vector_drawable_open_in_browser_24px"
        android:title="@string/bbs_show_in_external_browser"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/bbs_settings"
        android:title="@string/action_settings" />
</menu>
