<?xml version="1.0" encoding="utf-8"?>
<menu  xmlns:android="http://schemas.android.com/apk/res/android"
    android:checkableBehavior="single">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_a_account"
            android:icon="@drawable/ic_person_add_24px"
            android:title="@string/add_a_account" />
        <item
            android:id="@+id/register_an_account"
            android:icon="@drawable/ic_register_account_24px"
            android:title="@string/register_an_account" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/manage_users"
            android:icon="@drawable/ic_manage_user_24px"
            android:title="@string/bbs_manage_users" />
        <item
            android:id="@+id/view_history"
            android:icon="@drawable/ic_history_24px"
            android:title="@string/view_history" />
    </group>
</menu>