<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kidozh.discuzhub.MainActivity" >
    <item
        android:id="@+id/bbs_share"
        android:icon="@drawable/ic_share_24px"
        android:title="@string/share"
        app:showAsAction="never" />
    <item
        android:id="@+id/bbs_settings"
        android:icon="@drawable/ic_settings_outlined_24px"
        android:title="@string/action_settings"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/bbs_about_app"
        android:icon="@drawable/ic_info_outlined_24px"
        android:title="@string/app_about"
        app:showAsAction="collapseActionView" />
</menu>
